feat: Implement email change confirmation for admin users in ProfilePage
- Added ConfirmationModal to handle email change requests.
- Introduced state management for email change modal.
- Implemented security checks to restrict email changes to admin users only.
- Logged critical security events for admin email changes.
- Updated styles for responsive design and improved layout consistency across components.
- Enhanced form styles for better user experience in employee management.

--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,5 @@ swagger.auth.enabled=true
 swagger.auth.username=swagger_admin
 swagger.auth.password=swagger123
 swagger.auth.realm=Naari API Documentation
+
+sk_1120.NO3JMADHkx2pYBuzUzKtBC1m5TB6mYAF
