--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "i18next": "^25.3.2",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1"
